--- a/demo/example.html
+++ b/demo/example.html
@@ -1,7 +1,7 @@
 <html>
 <body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.8/es5-shim.min.js"></script>
-  <script src="../build/browser/transliteration.min.js"></script>
+  <script src="https://unpkg.com/es5-shim"></script>
+  <script src="https://unpkg.com/transliteration/lib/browser/transliteration.min.js"></script>
   <script>
   function getEle(id) {
     return document.getElementById(id);
