Fix broken Element style link

--- a/demo/example.html
+++ b/demo/example.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
+  <link rel="stylesheet" href="https://unpkg.com/element-ui@1.4/lib/theme-default/index.css">
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+  <script src="https://unpkg.com/element-ui@1.4/lib/index.js"></script>
   <script src="https://unpkg.com/transliteration/lib/browser/transliteration.min.js"></script>
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <style>
