--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+  <script src="https://unpkg.com/@babel/polyfill/dist/polyfill.min.js"></script>
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
-  <script src="https://unpkg.com/element-ui@1.4/lib/index.js"></script>
+  <script src="https://unpkg.com/element-ui/lib/index.js"></script>
   <script src="https://unpkg.com/transliteration/lib/browser/transliteration.min.js"></script>
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <style>
