--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           translIgnore: '',
           translOpt: {
             /* Unicode characters that are not in the database will be replaced with `unknown` */
-            unknown: '[?]',
+            unknown: '',
             /* Custom replacement of the strings before transliteration */
             replace: [],
             /* Strings in the ignore list will be bypassed from transliteration */
