--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         }
       },
       methods: {
-        transl: window.transl,
+        transliterate: window.transliterate,
         slugify: window.slugify,
         addTranslReplace: function() {
           this.translOpt.replace.push([this.translReplace.from, this.translReplace.to]);
